--- a/iframe.html
+++ b/iframe.html
@@ -6,7 +6,9 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!-- javascript -->
     <script type='text/javascript' src='http://code.jquery.com/jquery-1.8.2.js'></script>
@@ -34,19 +36,19 @@
         <div id="" class="letter"></div>
         <div id="" class="letter"></div>
 
-        <div id="192" class="double"><p>~</p><br><p>`</p></div>
-        <div id="49" class="double"><p>!</p><br><p class="number"></p></div>
-        <div id="50" class="double"><p>@</p><br><p class="number"></p></div>
-        <div id="51" class="double"><p>#</p><br><p class="number"></p></div>
-        <div id="52" class="double"><p>$</p><br><p class="number"></p></div>
-        <div id="53" class="double"><p>%</p><br><p class="number"></p></div>
-        <div id="54" class="double"><p>^</p><br><p class="number"></p></div>
-        <div id="55" class="double"><p>&</p><br><p class="number"></p></div>
-        <div id="56" class="double"><p>*</p><br><p class="number"></p></div>
-        <div id="57" class="double"><p>(</p><br><p class="number"></p></div>
-        <div id="48" class="double"><p>)</p><br><p class="number"></p></div>
-        <div id="189" class="double"><p>__</p><br><p class="number"></p></div>
-        <div id="187" class="double"><p>+</p><br><p></p></div>
+        <div id="192" class="double"><p></p><br><p></p></div>
+        <div id="49" class="double"><p></p><br><p class="number"></p></div>
+        <div id="50" class="double"><p></p><br><p class="number"></p></div>
+        <div id="51" class="double"><p></p><br><p class="number"></p></div>
+        <div id="52" class="double"><p></p><br><p class="number"></p></div>
+        <div id="53" class="double"><p></p><br><p class="number"></p></div>
+        <div id="54" class="double"><p></p><br><p class="number"></p></div>
+        <div id="55" class="double"><p></p><br><p class="number"></p></div>
+        <div id="56" class="double"><p></p><br><p class="number"></p></div>
+        <div id="57" class="double"><p></p><br><p class="number"></p></div>
+        <div id="48" class="double"><p></p><br><p class="number"></p></div>
+        <div id="189" class="double"><p></p><br><p class="number"></p></div>
+        <div id="187" class="double"><p></p><br><p>=</p></div>
         <div id="8" class="small"></div>
 
         <div id="" class="small"></div>
@@ -60,9 +62,9 @@
         <div id="73" class="letter"></div>
         <div id="79" class="letter"></div>
         <div id="80" class="letter"></div>
-        <div id="219" class="double"><p>{</p><br><p></p></div>
-        <div id="221" class="double"><p>}</p><br><p></p></div>
-        <div id="220" class="double"><p>|</p><br><p></p></div>
+        <div id="219" class="double"><p></p><br><p></p></div>
+        <div id="221" class="double"><p></p><br><p></p></div>
+        <div id="220" class="double"><p></p><br><p></p></div>
 
         <div id="20" class="middle"></div>
         <div id="65" class="letter"></div>
@@ -74,8 +76,8 @@
         <div id="74" class="letter"></div>
         <div id="75" class="letter"></div>
         <div id="76" class="letter"></div>
-        <div id="186" class="double"><p>:</p><br><p></p></div>
-        <div id="222" class="double"><p>"</p><br><p></p></div>
+        <div id="186" class="double"><p></p><br><p></p></div>
+        <div id="222" class="double"><p></p><br><p></p></div>
         <div id="13" class="middle"></div>
 
         <div class="16 large"></div>
@@ -105,4 +107,3 @@
     </div>
   </body>
 </html>
-
