--- a/iframe.html
+++ b/iframe.html
@@ -48,7 +48,7 @@
         <div id="57" class="double"><p></p><br><p class="number"></p></div>
         <div id="48" class="double"><p></p><br><p class="number"></p></div>
         <div id="189" class="double"><p></p><br><p class="number"></p></div>
-        <div id="187" class="double"><p></p><br><p>=</p></div>
+        <div id="187" class="double"><p></p><br><p></p></div>
         <div id="8" class="small"></div>
 
         <div id="" class="small"></div>
